--- a/kustomization-patches/dev1/adservice-patch.yaml
+++ b/kustomization-patches/dev1/adservice-patch.yaml
@@ -7,5 +7,5 @@ spec:
     spec:
       containers:
       - name: server
-        image: amol1996/adservice:v1
+        image: flapps/adservice:v1.1.1
 
