--- a/kustomization-patches/dev1/currencyservice-patch.yaml
+++ b/kustomization-patches/dev1/currencyservice-patch.yaml
@@ -7,5 +7,5 @@ spec:
     spec:
       containers:
       - name: server
-        image: amol1996/currenyservice:v1
+        image: flapps/currency-service:v1.1.1
 
