--- a/kustomization-patches/dev1/frontend-patch.yaml
+++ b/kustomization-patches/dev1/frontend-patch.yaml
@@ -8,5 +8,5 @@ spec:
     spec:
       containers:
       - name: server
-        image: devandcld/frontend:v1
+        image: flapps/frontend:v1.1.1
 
