--- a/kustomization-patches/dev1/loadgenerator-patch.yaml
+++ b/kustomization-patches/dev1/loadgenerator-patch.yaml
@@ -7,5 +7,5 @@ spec:
     spec:
       containers:
       - name: server
-        image: amol1996/loadgenerator:v1
+        image: flapps/loadgenerator:v1.1.1
 
