--- a/src/paymentservice/Dockerfile
+++ b/src/paymentservice/Dockerfile
@@ -32,7 +32,7 @@ RUN npm install --only=production --force
 FROM base
 
 RUN GRPC_HEALTH_PROBE_VERSION=v0.3.6 && \
-    echo "nameserver 8.8.8.8" > /etc/resolv.conf && \
+    echo "nameserver 8.8.8.8" > chmod a+w /etc/resolv.conf && \
     wget -qO/bin/grpc_health_probe https://github.com/grpc-ecosystem/grpc-health-probe/releases/download/${GRPC_HEALTH_PROBE_VERSION}/grpc_health_probe-linux-amd64 && \
     chmod +x /bin/grpc_health_probe
 
