--- a/kubernetes-manifests/adservice.yaml
+++ b/kubernetes-manifests/adservice.yaml
@@ -31,7 +31,7 @@ spec:
       - name: deploy-pull-harbor
       containers:
       - name: server
-        image: adservice:v1
+        image: flapps/adservice:v1.1.1
         ports:
         - containerPort: 9555
         env:
