--- a/kubernetes-manifests/cartservice.yaml
+++ b/kubernetes-manifests/cartservice.yaml
@@ -31,7 +31,7 @@ spec:
       - name: deploy-pull-harbor
       containers:
       - name: server
-        image: cartservice:v1
+        image: flapps/cartservice:v1.1.1
         ports:
         - containerPort: 7070
         env:
