--- a/kubernetes-manifests/checkoutservice.yaml
+++ b/kubernetes-manifests/checkoutservice.yaml
@@ -30,7 +30,7 @@ spec:
       - name: deploy-pull-harbor
       containers:
         - name: server
-          image: checkoutservice:v1
+          image: flapps/checkout-svc:v1.1.1
           ports:
           - containerPort: 5050
           readinessProbe:
