--- a/kubernetes-manifests/currencyservice.yaml
+++ b/kubernetes-manifests/currencyservice.yaml
@@ -31,7 +31,7 @@ spec:
       terminationGracePeriodSeconds: 5
       containers:
       - name: server
-        image: currenyservice:v1
+        image: flapps/curreny-service:v1.1.1
         ports:
         - name: grpc
           containerPort: 7000
