--- a/kubernetes-manifests/productcatalogservice.yaml
+++ b/kubernetes-manifests/productcatalogservice.yaml
@@ -31,7 +31,7 @@ spec:
       - name: deploy-pull-harbor
       containers:
       - name: server
-        image: productcatalogservice:v1
+        image: flapps/product-catalog-svc:v1.1.1
         ports:
         - containerPort: 3550
         env:
