--- a/kubernetes-manifests/recommendationservice.yaml
+++ b/kubernetes-manifests/recommendationservice.yaml
@@ -31,7 +31,7 @@ spec:
       - name: deploy-pull-harbor
       containers:
       - name: server
-        image: recommendationservice:v1 
+        image: flapps/recommendation-service:v1.1.1 
         ports:
         - containerPort: 8080
         readinessProbe:
